// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Header Should render the Header with Title and Items 1`] = `
.c4 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c4::-moz-focus-inner {
  border: 0;
}

.c4:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c4 svg {
  display: inline-block;
  margin-top: -4px;
}

.c4 .sc-gyUeRy {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c4:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 24px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(200,29%,90%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 0;
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c4 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c1:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c3:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding: 8px 40px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        Heading Title
      </h2>
    </div>
    <div
      class="c3"
    >
      <button
        aria-live="assertive"
        class="c4"
        type="button"
      >
        <span>
          Click me!
        </span>
      </button>
      I'll be back
    </div>
  </header>
</div>
`;

exports[`component: Header Should render the Header with Title and Items 2`] = `
.c4 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c4::-moz-focus-inner {
  border: 0;
}

.c4:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c4 svg {
  display: inline-block;
  margin-top: -4px;
}

.c4 .sc-gyUeRy {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c4:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c2 {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 24px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(200,29%,90%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 0;
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c4 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c1:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c3:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding: 8px 40px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        Hasta la vista, baby
      </h2>
    </div>
    <div
      class="c3"
    >
      <button
        aria-live="assertive"
        class="c4"
        type="button"
      >
        <span>
          Click me!
        </span>
      </button>
      I'll be back
    </div>
  </header>
</div>
`;

exports[`component: Header Should render the Header with Title, Breadcrumb and Items 1`] = `
.c4 {
  font-size: 8px;
  vertical-align: middle;
}

.c3 {
  color: black;
  font-style: normal;
  outline: none;
}

.c3:visited,
.c3:link {
  color: hsl(200,9%,35%);
  font-style: normal;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c3:focus {
  outline: hsl(200,96%,35%) solid 1px;
}

.c5 {
  color: hsl(200,18%,45%);
  margin: 0 3px;
  font-size: 10px;
}

.c2 {
  font-size: 15px;
  line-height: 1.6;
}

.c2 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c2 [aria-current='page'] {
  color: hsl(200,10%,20%);
  font-style: italic;
}

.c8 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  color: hsl(200,96%,11%);
  background-color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c8 svg {
  display: inline-block;
  margin-top: -4px;
}

.c8 .sc-gyUeRy {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c8:hover {
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(200,96%,11%);
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 24px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(200,29%,90%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 0;
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 15px;
    line-height: 1.6;
  }
}

@media screen and (min-width:1024px) {
  .c8 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c1:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c7:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding: 8px 40px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <nav
        aria-label="Breadcrumb"
        class="c2"
      >
        <ul>
          <li>
            <a
              class="c3"
              href="/"
            >
              Label
            </a>
            <svg
              class="c4 c5"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                transform="matrix(-1 0 0 1 24 0)"
              />
            </svg>
          </li>
          <div
            aria-current="page"
          >
            <em>
              Label
            </em>
          </div>
        </ul>
      </nav>
      <h2
        class="c6"
      >
        Heading Title
      </h2>
    </div>
    <div
      class="c7"
    >
      <button
        aria-live="assertive"
        class="c8"
        type="button"
      >
        <span>
          Click me!
        </span>
      </button>
      I'll be back
    </div>
  </header>
</div>
`;

exports[`component: Header Should render the Header witha a single title 1`] = `
.c2 {
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(200,29%,90%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 0;
  width: 100%;
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0px;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c1:last-child {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding: 8px 40px;
  }
}

<div>
  <header
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        Hasta la vista, baby
      </h2>
    </div>
  </header>
</div>
`;
